--- a/gdk4/Gir.toml
+++ b/gdk4/Gir.toml
@@ -360,3 +360,6 @@ manual_traits = ["ToplevelExtManual"]
     [[object.function]]
     name = "show_window_menu"
     manual = true # event is a fundemental type
+    [[object.signal]]
+    name = "compute-size"
+    ignore = true # manual
